fix horizontal scroll in mobile view

--- a/css/general.css
+++ b/css/general.css
@@ -40,6 +40,7 @@ html {
     /* Percentage of user's borwser font-size setting */
     font-size: 62.5%; /* it makes 1 rem = 10px*/
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
@@ -48,6 +49,7 @@ body {
     line-height: 1;
     color: #555;
     overflow-x: hidden;
+    position: relative;
 }
 
 /*******************************/
